Added more public styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,71 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
+.expand-sm-icon:hover svg {
+    transition: all 0.2s ease-in-out;
+    transform: scale(1.1);
+}
 
-.shrink:hover {
-  transition: all 0.2s ease-in-out;
-  transform: scale(0.94);
+.expand-sm-icon:not(:hover) svg {
+    transition: all 0.2s ease-out;
+}
+
+.expand-sm:hover {
+    transition: all 0.2s ease-in-out;
+    transform: scale(1.05);
 }
 
 .expand-sm:not(:hover) {
-  transition: all 0.3s ease-out;
+    transition: all 0.2s ease-out;
+}
+
+.pointer {
+    cursor: default;
+}
+
+.btn-primary:focus,
+.btn:focus {
+    box-shadow: none !important;
+}
+
+.btn-bg-transparent,
+.btn-primary:hover {
+    background-color: transparent !important;
+    border-color: transparent !important;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
