--- a/src/components/Button/Option/style.css
+++ b/src/components/Button/Option/style.css
@@ -4,11 +4,11 @@
     display: block;
     padding: 2px 5px;
     line-height: 20px;
-    right: -10px;
-    top: -10px;
+    right: 5px;
+    top: 5px;
     font-size: 20px;
     background: #ffffff;
-    border: 1px solid #9e9e9e;
+    border: none;
 }
 
 .opt-b {
