added new class for font-size

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
     color: #61dafb;
 }
 
+.text-size-medium {
+    font-size: 18px;
+}
+
 .expand-sm-icon:hover svg {
     transition: all 0.2s ease-in-out;
     transform: scale(1.1);
