--- a/src/components/Card/Expandable/style.css
+++ b/src/components/Card/Expandable/style.css
@@ -2,21 +2,6 @@ p{
     margin-bottom: 0 !important;
 }
 
-/*Expandable Container*/
-
-.m-8{
-    margin: 8px 0;
-}
-
-.border{
-    border: 1px solid rgba(0,0,0,0.12);
-}
-
-/*External Classes*/
-/*Only when this component is used*/
-.card {
-    margin: 10px 0;
-}
-.cont-container {
-    width: 40%;
+.card-expandable-container {
+    padding: 30px 20px;
 }
