--- a/src/components/Card/ExpandableWithImage/style.css
+++ b/src/components/Card/ExpandableWithImage/style.css
@@ -2,3 +2,13 @@
     width: 250px;
     height: 250px;
 }
+
+.lang-container {
+    margin-right: 2px;
+}
+
+.lang {
+    background-color: rgb(49, 96, 148);
+    padding: 5px;
+    color: white;
+}
