--- a/src/App.css
+++ b/src/App.css
@@ -1,88 +1,145 @@
 .App {
-    text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-    height: 40vmin;
-    pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-    color: #61dafb;
+	color: #61dafb;
+}
+
+.background-light-grey {
+	background-color: #eaeaea;
+}
+
+.border-radius-5 {
+	border-radius: 5px;
 }
 
 .font-12 {
-    font-size: 12px;
+	font-size: 12px !important;
+}
+
+.font-13 {
+	font-size: 13px !important;
+}
+
+.font-14 {
+	font-size: 14px !important;
 }
 
 .mx-small {
-    margin: 0 1px;
+	margin: 0 1px;
 }
 
 .popup-content {
-    width: auto !important;
-    max-width: 700px !important;
+	max-width: 500px !important;
+	border-radius: 5px;
+	padding: 15px !important;
+}
+
+.padding-20 {
+	padding: 20px;
+}
+
+.padding-top-20 {
+	padding: 20px 0 0 0 !important;
 }
 
 .text-size-medium {
-    font-size: 18px;
+	font-size: 18px;
 }
 
 .expand-sm-icon:hover svg {
-    transition: all 0.2s ease-in-out;
-    transform: scale(1.1);
+	transition: all 0.2s ease-in-out;
+	transform: scale(1.1);
 }
 
 .expand-sm-icon:not(:hover) svg {
-    transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
 }
 
 .expand-sm:hover {
-    transition: all 0.2s ease-in-out;
-    transform: scale(1.05);
+	transition: all 0.2s ease-in-out;
+	transform: scale(1.05);
 }
 
 .expand-sm:not(:hover) {
-    transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
 }
 
 .pointer {
-    cursor: default;
+	cursor: default;
 }
 
 .btn-primary:focus,
 .btn:focus {
-    box-shadow: none !important;
+	box-shadow: none !important;
 }
 
 .btn-bg-transparent,
 .btn-primary:hover {
-    background-color: transparent !important;
-    border-color: transparent !important;
+	background-color: transparent !important;
+	border-color: transparent !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	cursor: default;
 }
 
 @keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes anvil {
+	0% {
+		transform: scale(1) translateY(0px);
+		opacity: 0;
+		box-shadow: 0 0 0 rgba(241, 241, 241, 0);
+	}
+	1% {
+		transform: scale(0.5) translateY(10px);
+		opacity: 0;
+		box-shadow: 0 0 0 rgba(241, 241, 241, 0);
+	}
+	100% {
+		transform: scale(1) translateY(0px);
+		opacity: 1;
+		box-shadow: 0 0 500px rgba(241, 241, 241, 0);
+	}
+}
+.popup-content {
+	animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
+	-webkit-animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
 }
